# fuda

./: CLAUDE.md  Cargo.build-spec.json  Cargo.toml  flake.nix
src/: comment.rs  detect.rs  lib.rs
