[package]
name = "fuda"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Fuda (札) — fast comment toggling for Neovim with treesitter context awareness"
homepage = "https://github.com/pleme-io/fuda"
repository = "https://github.com/pleme-io/fuda"
readme = "README.md"
license = "MIT"
categories = ["text-editors"]
keywords = ["neovim", "comment", "toggle", "treesitter"]

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11"] }
tane = { path = "../tane", version = "0.1.0" }
kigi = { path = "../kigi", version = "0.1.0" }
kakitori = { path = "../kakitori", version = "0.1.0" }
